clamav.yaml
#---------------------------------------------------------------------
# Modo de publicacion de ClamAV
#---------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: clamav
  namespace: nextcloud
  labels:
    app: clamav
spec:
  type: ClusterIP
  selector:
    app: clamav
  ports:
    - port: 3310
      targetPort: 3310
      protocol: TCP

---
#---------------------------------------------------------------------
# ClamAV (Antivirus)
#---------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamav
  namespace: nextcloud
  labels:
    app: clamav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clamav
  template:
    metadata:
      labels:
        app: clamav
    spec:
      containers:
      - name: clamav
        image: clamav/clamav:1.4.3
        ports:
        - name: clamd-socket
          containerPort: 3310
          protocol: TCP
        #-----------------------------------------------------------
        # Verifica si el contenedor está vivo y funcionando
        #-----------------------------------------------------------
        livenessProbe:
          tcpSocket:
            port: clamd-socket
          initialDelaySeconds: 300
          periodSeconds: 60
        #-----------------------------------------------------------
        # Verifica si el contenedor está listo para servir tráfico.
        #-----------------------------------------------------------
        readinessProbe:
          exec:
            command: ["clamdscan", "--version"]
          initialDelaySeconds: 300
          periodSeconds: 10
        #-----------------------------------------------------------
        # limites de recursos
        #-----------------------------------------------------------
        resources:
          requests:
            cpu: "1" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
            memory: "4Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
          limits:
            cpu: "1" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
            memory: "4Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
        volumeMounts:
        - name: clamav-config
          mountPath: /etc/clamav/clamd.conf
          subPath: clamd.conf
        - name: freshclam-config
          mountPath: /etc/clamav/freshclam.conf
          subPath: freshclam.conf
      volumes:
      - name: clamav-config
        configMap:
          name: clamav-config
      - name: freshclam-config
        configMap:
          name: freshclam-config
