collabora.yaml
#---------------------------------------------------------------------
# Modo de publicacion de Collabora
#---------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app: collabora
spec:
  selector:
    app: collabora
  ports:
    - port: 9980
      targetPort: 9980
      protocol: TCP
  type: ClusterIP

---
#---------------------------------------------------------------------
# Collabora Online (CODE)
#---------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app: collabora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      labels:
        app: collabora
    spec:
      hostAliases:
      - ip: "10.43.152.50" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
      - ip: "172.16.9.10" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
        hostnames:
        - "nextcloud.test.local"  # <--- ¡CAMBIA ESTO A TU NECESIDAD!
      containers:
        - name: collabora-code
          image: collabora/code:latest
          ports:
            - containerPort: 9980
              name: collabora
          resources:
            requests:
              cpu: "1" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
              memory: "2Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
            limits:
              cpu: "1" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
              memory: "2Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
          securityContext:
            capabilities: { add: ["MKNOD"] }
          readinessProbe:
            httpGet: { path: /hosting/discovery, port: 9980 }
            initialDelaySeconds: 180
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet: { path: /hosting/discovery, port: 9980 }
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 3
          volumeMounts:
            - name: collabora-data
              mountPath: /var/lib/lool
      volumes:
        - name: collabora-data
          persistentVolumeClaim:
            claimName: collabora-pvc-data
