nextcloud.yaml
#-----------------------------------------------------------
# Modo de publicacion de Nextcloud
#-----------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud  
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
#-----------------------------------------------------------
# Nextcloud (Aplicación Principal)
#-----------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1 # <--- ¡CAMBIA ESTO A TU NECESIDAD!
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:stable-apache
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "2" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
            memory: "4Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
          limits:
            cpu: "4" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
            memory: "6Gi" # <--- ¡CAMBIA ESTO A TU NECESIDAD!
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nextcloud
            mountPath: /var/www/html
          - name: nextcloud-data
            mountPath: /var/www/html/data
            subPath: data
          - name: nextcloud-ini
            mountPath: /usr/local/etc/php/conf.d/nextcloud.ini
            subPath: nextcloud.ini
          - name: opcache-ini
            mountPath: /usr/local/etc/php/conf.d/opcache-recommended.ini
            subPath: opcache-recommended.ini
          - name: fpm-config
            mountPath: /usr/local/etc/php-fpm.d/www.conf
            subPath: www.conf
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: nextcloud-ini
          configMap:
            name: nextcloud-ini
        - name: opcache-ini
          configMap:
            name: opcache-ini
        - name: fpm-config
          configMap:
            name: nextcloud-fpm-config
