ingress-collabora.yaml
#-----------------------------------------------------------
# Modo de publicacion de Nextcloud
#-----------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora-ingress
  namespace: nextcloud
  labels:
    app: collabora
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/proxy-buffering: "off" 
    nginx.ingress.kubernetes.io/proxy-body-size: "0" 
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" 
spec:    
  ingressClassName: nginx 
  rules:
  - host: apu.pitvirtual.uni.edu.pe # <--- ¡CAMBIA ESTO A TU AÑADIR TU DOMINIO!
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: collabora 
            port:
              number: 9980 
  tls:
  - hosts:
    - apu.pitvirtual.uni.edu.pe # <--- ¡CAMBIA ESTO A TU DOMINIO!
    secretName: apu.pitvirtual.uni.edu.pe-tls # <--- ¡CAMBIA ESTO A DONDE CERT-MANAGER ALMACENARA EL CERTIFICADO
