ingress-nextcloud.yaml
#-----------------------------------------------------------
# Modo de publicacion de Nextcloud
#-----------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  labels:
    app: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-hide-header: "Upgrade"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      X-Real-IP: $remote_addr
      X-Forwarded-For: $proxy_add_x_forwarded_for
      X-Forwarded-Host: $host
      Host: $host
      X-Forwarded-Proto: $scheme
spec:
  ingressClassName: nginx
  rules:
  - host: apu.uni.edu.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  tls:
  - hosts:
    - apu.uni.edu.pe
    secretName: apu.uni.edu.pe-tls
